@@ -53,6 +53,10 @@ class User {
 		'highlightbroken',
 		'justify',
 		'hideminor',
+		'rc_hidebots',
+		'rc_hideown',
+		'newpageshidebots',
+		'newpageshideown',
 		'extendwatchlist',
 		'usenewrc',
 		'numberheadings',
