@@ -24,11 +24,11 @@ class SpecialRecentChanges extends SpecialPage {
 		$opts->add( 'from', '' );
 
 		$opts->add( 'hideminor',     $wgUser->getBoolOption( 'hideminor' ) );
-		$opts->add( 'hidebots',      true  );
+		$opts->add( 'hidebots',      $wgUser->getBoolOption( 'rc_hidebots' ) );
 		$opts->add( 'hideanons',     false );
 		$opts->add( 'hideliu',       false );
 		$opts->add( 'hidepatrolled', $wgUser->getBoolOption( 'hidepatrolled' ) );
-		$opts->add( 'hidemyself',    false );
+		$opts->add( 'hidemyself',    $wgUser->getBoolOption( 'rc_hideown' ) );
 
 		$opts->add( 'namespace', '', FormOptions::INTNULL );
 		$opts->add( 'invert', false );
