@@ -499,8 +499,12 @@ XHTML id names.
 'tog-highlightbroken'         => 'Format broken links <a href="" class="new">like this</a> (alternative: like this<a href="" class="internal">?</a>)',
 'tog-justify'                 => 'Justify paragraphs',
 'tog-hideminor'               => 'Hide minor edits in recent changes',
+'tog-rc_hidebots'             => 'Hide bot edits in recent changes',
+'tog-newpageshidebots'        => 'Hide bot edits from new page list',
 'tog-hidepatrolled'           => 'Hide patrolled edits in recent changes',
 'tog-newpageshidepatrolled'   => 'Hide patrolled pages from new page list',
+'tog-rc_hideown'              => 'Hide my own edits in recent changes',
+'tog-newpageshideown'         => 'Hide my own edits from new page list',
 'tog-extendwatchlist'         => 'Expand watchlist to show all changes, not just the most recent',
 'tog-usenewrc'                => 'Enhanced recent changes (requires JavaScript)',
 'tog-numberheadings'          => 'Auto-number headings',
